# Prcpd

./: .gitignore  3-data_split.py  4-data_norm.py  5-data_pod.py  5-train.py  6-analysis.py  6-train.py  8-analysis.py  README.md  check_gpu.py  config.yaml  dataset_parameters.csv  dataset_parameters_cleaned.csv  models.py  pod_utils.py  pyproject.toml
1D-power-prediction/: dataset_train_processed.csv  dataset_val_processed.csv  datatrans.py  evaluate_plot.py  train_lstm.py  verifydata.py
2D-PINN/: 1.data.py  2.pod.py  3-model.py  4.train.py  5.test.py  6.validate.py  7.pod-field.py  7.py  8.power-field.py
2D-PINN/models/: loss_history.pt
2D-PINN/results/: training_log.csv
2D-POD-DNN/: build_dataset.py  evaluate_results.py  models.py  pod.py  pod_utils.py  train.py
data-gen/: 1-run_simulations.py  1.generate_twigl_datasets.py  2-generate_inputdata.py  2.run_femffusion_cases.py  3.filter_dataset.py  4-output_trans.py  check_data.py  dataset_parameters.csv  dataset_parameters_cleaned.csv  input_trans.py  output_trans.py  outputdata-validation.py  plot_fig1_power.py  pod_dnn_model.pth  run_simulations.py  scaler_X.pkl  scaler_Y.pkl  test.py
data-gen/2D_TWIGL/: twigl_diff_ramp_quarter.prm  twigl_quarter.xsec  twigl_sp1_ramp_quarter.prm
data-gen/prm_cases/: case_000.prm  case_001.prm  case_002.prm  case_003.prm  case_004.prm  case_005.prm  case_006.prm  case_007.prm  case_008.prm  case_009.prm  case_010.prm  case_011.prm  case_012.prm  (+237 more)
data-split/: dataset_test_extrapolation.csv  dataset_test_extrapolation_processed.csv  dataset_train.csv  dataset_val.csv
