[project]
name = "prcpd"
version = "0.1.0"
description = "Nuclear Engineering & ML Thesis Environment"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "torch",
    "torchvision",
    "jupyterlab",
    "scikit-learn>=1.7.2",
]


# PyTorch 的专用源
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true 

# 只有 torch 相关包去上面的 pytorch 源下载
[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
